# 3D_dubaicost

./: .env.example  .gitignore  README.md  docker-compose.yml  ПЛАН_СДАЧИ.md  РАЗВЁРТЫВАНИЕ.md
.github/workflows/: ci.yml
backend/: Dockerfile  pyproject.toml
backend/app/: main.py
backend/app/api/: buildings.py  coverage.py  districts.py  layers.py  map.py  pois.py  review.py  tiles.py
backend/app/core/: alerts.py  config.py  db.py  logging.py
backend/app/models/: __init__.py  costs.py  geo.py  metrics.py  overlays.py  transactions.py
backend/etl/: cron.py
backend/etl/connectors/: alias_overrides.py  base.py  cooling_manual.py  dld_rent.py  dld_sales.py  service_charge_manual.py  util.py
backend/etl/jobs/: assign_cooling_provider.py  build_demographics.py  compute_parking.py  enrich_aliases.py  estimate_fill.py  fetch_grid.py  fetch_osm_buildings.py  fetch_pois.py  load_geo.py  rematch_all.py
backend/etl/pipeline/: aggregate.py  cooling.py  matching.py
backend/migrations/: env.py  script.py.mako
backend/migrations/versions/: 0001_initial.py  0002_demographics_pois.py
backend/tests/: test_anomaly.py  test_cooling_estimate.py  test_cooling_validation.py  test_matching.py  test_osm_parse.py
data/: alias_overrides.yaml  cooling_tariffs.yaml  service_charges.csv
frontend/: index.html  nginx.conf  package-lock.json  package.json
frontend/src/: App.tsx  districtI18n.ts  i18n.ts  index.css  landmarks.config.ts  layers.config.ts  overlays.config.ts  store.ts
scripts/: bootstrap_local.py  fetch_official_data.py  restore_db.ps1
(+14 files in other folders)
